trunk/Archive2/d6/2831239ae55b8a/output
main.cpp: In function 'int main()':
main.cpp:23:22: error: invalid conversion from 'int*' to 'int' [-fpermissive]
     b->Foo((int*)ints);
                      ^
main.cpp:15:18: note:   initializing argument 1 of 'virtual void B::Foo(int)'
     virtual void Foo(int foo) override { }
                  ^
